--- a/style.css
+++ b/style.css
@@ -6,7 +6,17 @@
 /* font-family: 'Overpass', sans-serif; */
 body{
     background-color: hsl(216, 12%, 8%);
-    padding:5em
+    display: flex;
+    justify-content: center;
+    margin-top: 12em;
+}
+.backbutton{
+    display: none;
+    position: absolute;
+    margin-left: -20em;
+    color: hsl(25, 97%, 53%);
+    cursor: pointer;
+
 }
 .main{
 
@@ -19,10 +29,75 @@ body{
     background-image: radial-gradient( 90% 160% at top,hsl(213, 19%, 18%),hsl(216, 12%, 8%));
 
 }
-.thankyou{
+.popup{
     position: absolute;
+    /* javascript flex to none to flex */
     display: none;
+    flex-direction: column;
+    align-items: center;
+    padding: 4em 4em 2em 4em;
+    gap:2em;
+    border-radius: 35px;
+    min-width: 30em;
+    max-width: 30em;
+    max-height: 30em;
+    min-height: 30em;
+    background-image: radial-gradient( 90% 160% at top,hsl(213, 19%, 18%),hsl(216, 12%, 8%)); 
 }
+
+.popup img{
+    max-height: auto;
+    max-width: 50%;
+}
+.popup .selection{
+
+    border-radius: 25px;
+    text-align: center;
+
+    font-family: 'Overpass', sans-serif;
+    font-weight: 400;
+    padding: 0.7em 1.6em 0.5em 1.6em;
+    background-color: hsl(213, 19%, 18%);
+}
+.thankyou{
+    color:hsl(0, 0%, 100%);
+    font-family: 'Overpass', sans-serif;
+}
+.popup p{
+    text-align: center;
+    font-size: 17px;
+    font-weight: 400;
+    color:hsl(217, 12%, 63%) ;
+    line-height: 1.5;
+    letter-spacing: 1px;
+    margin-top: -1em;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .howdidwedo{
 
     display: flex;
@@ -80,7 +155,9 @@ body{
     color: hsl(0, 0%, 100%);
  }
  .submit{
+    border: none;
     min-width: 100%;
+    font-size: 16px;
     min-height: 3.5em;
     border-radius: 25px;
     font-family: 'Overpass', sans-serif;
